--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,482 @@
+/* map location styling*/
+.mapouter{display:table;width: 98%; margin: 10px;height: 100%;}
+.map{
+  display: block;
+  height: 100%;
+  width: 95%;
+  padding: 10px;
+  margin: 10px;
+  background-color: var(--graph-color);
+  border-radius: 20px;
+}
+
+.gmap_canvas{overflow:hidden;
+  position:relative;
+  height:400px;
+  width:100%;
+  background:#fff;
+}
+.gmap_canvas iframe{position:relative
+   !important;z-index:2
+    !important;
+  height: 100%;}
+.gmap_canvas a{color:#fff !important;position:absolute !important;top:0 !important;left:0 !important;z-index:0 !important;}
+:root{
+  --background-color:rgb(243, 244, 247) ;
+  --text-color:black;
+  --nav-bar-color:white;
+  --graph-color:white;
+}
+.root{
+  --background-color:rgb(243, 244, 247) ;
+  --text-color:black;
+  --nav-bar-color:white;
+  --graph-color:white;
+}
+.dark-theme{
+  --background-color:rgb(22,23,47);
+  --text-color:white;
+  --nav-bar-color:rgb(33, 38, 49);
+  --graph-color:rgb(33, 38, 49);
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color:var(--background-color) ;
+  color: var(--text-color);
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.App{
+  display: grid;
+  grid-template-columns: 1fr 3.65fr;
+}
+.nav-notification{
+  height:50%;
+  width: 15%;
+  background-color: var(--graph-color);
+  position: fixed;
+  padding: 10px;
+  border-radius: 20px;
+  margin-top: 4%;
+  text-decoration: none;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  overflow: scroll;
+  display: block;
+  transition: ease-in-out 0.4s;
+  box-shadow: 0 0 10px rgb(65, 65, 65);
+  right: 16%;
+  z-index: 100;
+  display: none;
+}
+.nav-list{
+  height:60%;
+  width: 20%;
+  background-color: var(--graph-color);
+  position: fixed;
+  padding: 10px;
+  border-radius: 20px;
+  margin-top: 4%;
+  text-decoration: none;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  overflow: scroll;
+  display: block;
+  transition: ease-in-out 0.4s;
+  box-shadow: 0 0 10px rgb(65, 65, 65);
+  right: 13%;
+  z-index: 100;
+  display: none;
+}
+.nav-mail{
+  height:85%;
+  width: 30%;
+  background-color: var(--graph-color);
+  position: fixed;
+  padding: 10px;
+  border-radius: 20px;
+  margin-top: 4%;
+  text-decoration: none;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  overflow: scroll;
+  display: block;
+  transition: ease-in-out 0.4s;
+  box-shadow: 0 0 10px rgb(65, 65, 65);
+  right: 10%;
+  z-index: 100;
+  display: none;
+}
+.nav-mail.open{
+  display: block;
+}
+.nav-mail.close{
+  display: none;
+}
+.nav-list.open{
+  display: block;
+}
+.nav-list.close{
+  display: none;
+}
+.nav-notification.open{
+  display: block;
+}
+.nav-notification.close{
+  display: none;
+}
+.left-nav{
+  height: 100%;
+  width: 20%;
+  background-color: var(--graph-color);
+  position: fixed;
+  padding: 10px;
+  text-decoration: none;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  overflow: scroll;
+  display: block;
+  transition: ease-in-out 0.4s;
+  box-shadow: 0 0 10px rgb(65, 65, 65);
+  right: 1px;
+  z-index: 100;
+}
+.left-nav.open{
+  right: 0;
+  
+}
+.left-nav.close{
+  right: -300px;
+}
+
+.navbar{
+  height: 100%;
+  width: 20%;
+  background-color: rgb(33, 38, 49);
+  position: fixed;
+  padding: 10px;
+  text-decoration: none;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  overflow: scroll;
+  display: block;
+  transition: ease-in-out 0.6s;
+}
+span{
+  margin-left: 10px;
+}
+.down{
+  
+  padding-top: 5px;
+}
+.nav-bar-links-down{
+  display: flex;
+  justify-content: space-between;
+}
+.links{
+  padding: 10px;
+  margin-top: 20px;
+}
+.navbar-links {
+  display: block;
+  margin: 10px;
+  padding: 5px;
+  text-decoration: none;
+  font-size: 14px;
+  color: rgb(231, 230, 230);
+  cursor: pointer;
+  transition: ease-in-out 0.3s;
+  height: 30px;
+  width: 90%;
+
+}
+.navbar-links:hover{
+  background-color: rgb(66, 76, 97);
+  border-radius: 5px;
+}
+.dropdown-cnt{
+  display: none;
+  
+
+}
+.dropdown-cnt.open{
+  display: block;
+  top: 0;
+  
+  
+}
+.dropdown-cnt.close{
+  
+  top: -300px;
+}
+
+.dropdown{
+  background-color: transparent;
+  
+  margin-top: 5px;
+  padding: 10px;
+
+  border: none;
+  text-decoration: none;
+  font-size: 15px;
+  color: rgb(231, 230, 230);
+  display:block;
+  text-align: center;
+
+}
+
+.navbar-head{
+  font-size: 23px;
+  color: rgb(202, 202, 202);
+  border: 1px solid rgb(192, 192, 192);
+  text-align: center;
+  padding:10px ;
+  margin: 0;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+.nav-user{
+  display: flex;
+
+}
+.nav-user-icons{
+  margin: 10px;
+  cursor: pointer;
+  color: rgb(107, 107, 107);
+}
+.nav-user-icons:hover{
+  color: var(--text-color);
+}
+.nav-user-icons.sun{
+  margin: 10px;
+  cursor: pointer;
+  color: rgb(107, 107, 107);
+  border-left: solid 1px rgb(172, 172, 172);
+  border-right: 1px solid rgb(172, 172, 172);
+  width: 50px;
+  text-align: center;
+}
+.nav-1{
+  display: flex;
+}
+.separetor{
+  font-size: 15px;
+  color: rgb(107, 119, 133);
+  margin-top: 20px;
+  padding-top:20px ;
+
+}
+.stick-navbar{
+  height: 55px;
+  width: 77%;
+  position: fixed;
+  background-color: var(--nav-bar-color);
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  box-shadow: 0px 0px 5px rgb(122, 122, 122);
+}
+input{
+  height: 30px;
+  width: 300px;
+  background-color: transparent;
+  border-radius: 10px;
+  border: none;
+  padding: 1px;
+  
+}
+
+.search-bar{
+  display: flex;
+  justify-content: center;
+  height: 33px;
+  width: 300px;
+  background-color: rgb(231, 230, 230);
+  margin-left: 10px;
+  border-radius: 10px;
+  padding: 3px ;
+  cursor: pointer;
+}
+.left{
+  display: flex;
+  margin: 5px;
+  padding: 5px ;
+}
+.hamburger{
+  padding: 5px;
+  cursor: pointer;
+  display: none;
+}
+.main-section{
+  overflow: scroll;
+  width: 100%;
+}
+.section{
+  padding-top: 50px;
+  margin-top: 50px;
+  width: 100%;
+}
+
+.main-home-cnt{
+  padding: 20px;
+}
+.home{
+  justify-content: center;
+  display: flex;
+  
+}
+.graph-cnt-1{
+  display: block;
+}
+.graph-1{
+  height: 240px;
+  width: 350px;
+  border-radius: 10px;
+  background-color: var(--graph-color);
+  margin-right: 10px;
+  box-shadow: 0 0 2px black;
+}
+.sub-graph-cnt-1{
+  margin-top: 50px;
+  display: flex;
+}
+.sub-graph-1{
+  height: 130px;
+  width: 150px;
+  border-radius: 10px;
+  background-color: var(--graph-color);
+  margin-right: 20px;
+  box-shadow: 0 0 2px black;
+
+}
+.sub-graph-2{
+  height: 130px;
+  width: 150px;
+  border-radius: 10px;
+  background-color: var(--graph-color);
+  margin-left: 20px;
+  box-shadow: 0 0 2px black;
+}
+.graph-cnt-2{
+  height: 420px;
+  width: 600px;
+  border-radius: 10px;
+  background-color: var(--graph-color);
+  margin-left: 10px;
+  box-shadow: 0 0 2px black;
+}
+.users-cnt{
+  
+  background-color:var(--graph-color);
+  padding: 20px;
+  margin: 30px;
+  box-shadow: 0 0 2px black;
+  border-radius: 10px;
+}
+.users-btn{
+  width: 150px;
+  height: 40px;
+  background-color:rgb(107, 119, 133);
+  border-radius: 10px;
+  cursor: pointer;
+  text-align: center;
+  place-content: center;
+  margin: 20px;
+  color: white;
+  padding: 3px;
+}
+.users-btn:hover{
+  background-color: rgb(92, 101, 112);
+}
+.users-cnt-head{
+  display: flex;
+  justify-content: space-between;
+}
+.users-data{
+  padding: 10px;
+  margin: 10px;
+}
+.users-main{
+  height: 100px;
+  padding: 10px;
+  border-top: solid 1px rgb(204, 204, 204);
+  border-bottom:solid 1px rgb(204, 204, 204) ;
+}
+@media (max-width:980px) {
+  .nav-mail.open{
+    display: none;
+  }
+  .nav-list.open{
+    display: none;
+  }
+  .nav-notification.open{
+    display: none;
+  }
+  
+  .navbar{
+    left: -500px;
+    width: 50%;
+    border-right: solid 2px blue;
+    z-index: 100;
+    
+  }
+
+  .navbar.open{
+    left:0;
+    
+  }
+  .navbar.close{
+    left:-500px;
+
+  }
+  .left-nav.open{
+    right: 0;
+    width: 50%;
+  }
+
+  
+  .App{
+    display: block;
+    grid-template-columns: none;
+  }
+  .stick-navbar{
+    width: 96%;
+    
+  }
+  
+  .hamburger{
+    display: block;
+  }
+  .home{
+    display: block;
+  }
+  .graph-1{
+    width: 100%;
+  }
+  .graph-cnt-1{
+    width: 100%;
+  }
+  .graph-cnt-2{
+    width: 100%;
+    margin-top: 20px;
+  }
+  .sub-graph-1{
+    width: 100%;
+  }
+  .sub-graph-2{
+    width: 100%;
+    
+  }
+  
+  
+}
+@media (max-width:600px) {
+  
+  .search-bar{
+    display: none;
+  }
+  .nav-1{
+    display: none;
+  }
 }
