--- a/src/index.css
+++ b/src/index.css
@@ -22,10 +22,11 @@
   height: 100%;}
 .gmap_canvas a{color:#fff !important;position:absolute !important;top:0 !important;left:0 !important;z-index:0 !important;}
 :root{
-  --background-color:rgb(243, 244, 247) ;
-  --text-color:black;
-  --nav-bar-color:white;
-  --graph-color:white;
+  --background-color:rgb(243, 244, 247) !important ;
+  --text-color:black !important;
+  --nav-bar-color:white !important;
+  --graph-color:white !important;
+  --box-shadow:0px 0px 2px black;
 }
 .light{
   --background-color:rgb(243, 244, 247) ;
@@ -34,10 +35,11 @@
   --graph-color:white;
 }
 .dark-theme{
-  --background-color:rgb(22,23,47);
-  --text-color:white;
-  --nav-bar-color:rgb(33, 38, 49);
-  --graph-color:rgb(33, 38, 49);
+  --background-color:rgb(29, 33, 43)!important;
+  --text-color:white !important;
+  --nav-bar-color:rgb(33, 38, 49) !important;
+  --graph-color:rgb(33, 38, 49) !important;
+  --box-shadow:0px 0px 2px white;
 }
 
 body {
@@ -160,39 +162,48 @@ code {
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   overflow: scroll;
   display: block;
-  transition: ease-in-out 0.6s;
+  transition: ease-in-out 0.8s;
 }
 span{
-  margin-left: 10px;
+  margin: 6px;
+  padding-left: 15px;
+  color: white;
+ 
 }
 .down{
   
-  padding-top: 5px;
+  padding-top: 7px;
+ 
 }
 .nav-bar-links-down{
   display: flex;
   justify-content: space-between;
+  
 }
 .links{
   padding: 10px;
   margin-top: 20px;
+  display: block;
 }
 .navbar-links {
   display: block;
+  
   margin: 10px;
   padding: 5px;
   text-decoration: none;
   font-size: 14px;
-  color: rgb(231, 230, 230);
+  color: rgb(150, 150, 150);
   cursor: pointer;
-  transition: ease-in-out 0.3s;
+  transition: ease-in-out 0.1s;
   height: 30px;
   width: 90%;
 
 }
+
 .navbar-links:hover{
   background-color: rgb(66, 76, 97);
   border-radius: 5px;
+  color: white;
 }
 .dropdown-cnt{
   display: none;
@@ -245,6 +256,14 @@ span{
   cursor: pointer;
   color: rgb(107, 107, 107);
 }
+ img{
+  margin: 3px;
+  width: 45px;
+  height: 45px;
+  border-radius: 100%;
+  cursor: pointer;
+}
+
 .nav-user-icons:hover{
   color: var(--text-color);
 }
@@ -275,7 +294,7 @@ span{
   display: flex;
   justify-content: space-between;
   padding: 10px;
-  box-shadow: 0px 0px 5px rgb(122, 122, 122);
+  box-shadow: var(--box-shadow);
 }
 input{
   height: 30px;
@@ -319,13 +338,13 @@ input{
 }
 
 .main-home-cnt{
-  padding: 20px;
+  padding: 10px;
+  margin: 15px;
 }
 .home{
   justify-content: center;
   display: flex;
-  padding: 10px;
-  margin: 20px;
+  
   
 }
 .graph-cnt-1{
@@ -337,7 +356,7 @@ input{
   border-radius: 10px;
   background-color: var(--graph-color);
   margin-right: 5px;
-  box-shadow: 0 0 2px black;
+  box-shadow: var(--box-shadow);
   padding: 10px;
 }
 .bar-chart{
@@ -357,7 +376,7 @@ input{
   border-radius: 10px;
   background-color: var(--graph-color);
   margin-right: 5px;
-  box-shadow: 0 0 2px black;
+  box-shadow: var(--box-shadow);
   padding: 10px;
 
 }
@@ -367,7 +386,7 @@ input{
   border-radius: 10px;
   background-color: var(--graph-color);
   margin-left: 5px;
-  box-shadow: 0 0 2px black;
+  box-shadow:var(--box-shadow);
   padding: 10px;
 }
 .graph-cnt-2{
@@ -376,7 +395,7 @@ input{
   border-radius: 10px;
   background-color: var(--graph-color);
   margin-left: 10px;
-  box-shadow: 0 0 2px black;
+  box-shadow: var(--box-shadow);
   padding: 2px;
 }
 .users-cnt-right{
@@ -389,20 +408,28 @@ input{
   border-radius: 5px;
   background-color: var(--graph-color);
   margin-left: 20px;
-  box-shadow: 0 0 2px black;
-  padding: 10px;
+  box-shadow: var(--box-shadow);
+  padding: 5px;
+  margin-bottom: 30px;
+
+}
+
+.users-block.mid{
+  margin-bottom: 0;
 }
 .users-main-cnt{
   display: flex;
+  margin-top: 30px;
 }
 .users-cnt{
   
   background-color:var(--graph-color);
   width: 75%;
   padding: 10px;
-  
-  box-shadow: 0 0 2px black;
+  overflow: scroll;
+  box-shadow: var(--box-shadow);
   border-radius: 5px;
+  max-height: 550px;
 }
 
 .users-btn{
@@ -427,14 +454,154 @@ input{
 .users-data{
   padding: 10px;
   margin: 10px;
+  margin-top: 20px;
 }
 .users-main{
-  height: 100px;
-  
+  height: 70px;
+  display: flex;
+  justify-content: space-between;
   border-top: solid 1px rgb(204, 204, 204);
   border-bottom:solid 1px rgb(204, 204, 204) ;
+  align-items: center;
+  padding: 5px;
+  
+}
+.users-data-head{
+  display: flex;
+  justify-content: space-between;
+  font-weight: bolder;
+  padding: 10px;
+}
+.users-created{
+  width: 250px;
+}
+.users-country{
+  width: 10px;
+  text-align: center;
+  justify-content: center;
+  margin-left: 20px;
+}
+.users-usage{ 
+  width: 170px;
+  margin-left: 40px;
+}
+.users-pic img{
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  
+  
+}
+.chart-cnt{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+.chart{
+  width: 45%;
+  padding: 10px;
+  margin: 10px;
+  background-color: var(--graph-color);
+  border-radius: 10px;
+  height: 100%;
+  box-shadow: var(--box-shadow);
+  
+
+}
+.colors-cnt{
+  height: 100%;
+  background-color: var(--graph-color);
+  padding: 20px;
+  border-radius: 10px;
+}
+.colors-cnt-items{
+  display: flex;
+  flex-wrap: wrap;
+  
+  
+}
+.colors{
+  display: block;
+  width: 20%;
+  justify-content: center;
+  padding: 10px;
+  margin: 10px;
+}
+.color{
+  width: 110px;
+  height: 110px;
+  border-radius: 5px;
+  
+}
+.color-desc{
+  display: block;
+  justify-content: center;
+  padding-top: 20px;
+  font-size: 17px;
+  width: 100%;
+  line-height: 35px;
+}
+.users-block-charts{
+  height: 100%;
+  width: 100%;
 }
 @media (max-width:980px) {
+  .colors-cnt-items{
+   display: block;
+    
+    
+  }
+  .colors{
+    display: block;
+    width: 90%;
+    justify-content: center;
+    padding: 10px;
+    margin: 10px;
+  }
+  .color{
+    width: 100%;
+    height: 400px;
+    border-radius: 5px;
+    
+  }
+  .users-block-charts{
+    height: 100%;
+    width: 100%;
+  }
+  .users-cnt-right{
+    display: block;
+    margin:20px;
+    margin-left: 0;
+    justify-content: center;
+    height: fit-content;
+  }
+  .users-block{
+    height: 100%;
+    width:100%;
+    align-items: center;
+    margin: 10px;
+    margin-bottom: 20px;
+  }
+  
+  .users-block.mid{
+    margin-bottom: 0;
+  }
+  .users-main-cnt{
+    display: flex;
+    margin-top: 30px;
+  }
+  .users-cnt{
+    
+    
+    width: 100%;
+    
+  }
+  
+  .users-main-cnt{
+    display:block;
+    
+  }
   .nav-mail.open{
     display: none;
   }
@@ -446,8 +613,8 @@ input{
   }
   
   .navbar{
-    left: -500px;
-    width: 50%;
+    left: -900px;
+    width: 60%;
     border-right: solid 2px blue;
     z-index: 100;
     
@@ -458,12 +625,12 @@ input{
     
   }
   .navbar.close{
-    left:-500px;
+    left:-900px;
 
   }
   .left-nav.open{
     right: 0;
-    width: 50%;
+    width: 60%;
   }
 
   
@@ -472,7 +639,7 @@ input{
     grid-template-columns: none;
   }
   .stick-navbar{
-    width: 96%;
+    width: 98%;
     
   }
   
@@ -484,26 +651,68 @@ input{
   }
   .graph-1{
     width: 100%;
+    height: 100%;
+    .bar-chart{
+      width: 100%;
+      height: 60%;
+    }
   }
   .graph-cnt-1{
     width: 100%;
+    height: 100%;
   }
   .graph-cnt-2{
-    width: 100%;
-    margin-top: 20px;
+    width: 99%;
+    
+    height: 100%;
+    margin-top: 20px ;
+    margin-left: 7px;
+    margin-right: 5px;
+    .bar-chart{
+      height: 100%;
+    }
+  }
+  .sub-graph-cnt-1{
+    display: block;
+    justify-content: center;
   }
   .sub-graph-1{
     width: 100%;
+    margin-bottom: 20px;
   }
   .sub-graph-2{
     width: 100%;
+    margin: 0;
     
+  }
+  .nav-1{
+    display: none;
+  }
+  .chart-cnt{
+    display: block;
+    margin-right: 10px;
+  }
+  .chart{
+    width: 90%;
+    margin-bottom: 50px;
   }
   
   
 }
 @media (max-width:600px) {
-  
+  .color{
+    width: 100%;
+    height: 200px;
+    border-radius: 5px;
+    
+  }
+  .users-data{
+    width: 100%;
+  }
+  .users-main{
+    width: 100%;
+    padding: 0;
+  }
   .search-bar{
     display: none;
   }
