--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@
   --nav-bar-color:white !important;
   --graph-color:white !important;
   --box-shadow:0px 0px 2px black;
+  --hover:rgb(224, 224, 224);
 }
 .light{
   --background-color:rgb(243, 244, 247) ;
@@ -40,12 +41,14 @@
   --nav-bar-color:rgb(33, 38, 49) !important;
   --graph-color:rgb(33, 38, 49) !important;
   --box-shadow:0px 0px 2px white;
+  --hover:rgb(66, 76, 97);
 }
 
 body {
   margin: 0;
   background-color:var(--background-color) ;
   color: var(--text-color);
+  transition: ease-in-out 0.5s;
   
 }
 
@@ -58,56 +61,107 @@ code {
   grid-template-columns: 1fr 3.65fr;
 }
 .nav-notification{
-  height:50%;
-  width: 15%;
+  height:75%;
+  width: 16%;
   background-color: var(--graph-color);
   position: fixed;
-  padding: 10px;
-  border-radius: 20px;
-  margin-top: 4%;
+  
+  border-radius: 10px;
+  margin-top: 50px;
   text-decoration: none;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   overflow: scroll;
   display: block;
   transition: ease-in-out 0.4s;
   box-shadow: 0 0 10px rgb(65, 65, 65);
-  right: 16%;
+  right: 270px;
+  z-index: 100;
+  display: none;
+  overflow: hidden;
+}
+.top-notif{
+  width: 100%;
+  height: 20px;
+  background-color: var(--hover);
+  text-align: left;
+  font-size: 13px;
+  padding: 5px;
+  padding-left: 10px;
+  
+
+}
+.bottom-notif{
+  padding: 10px;
+  margin: 10px;
+
+  font-size: 13px;
+  text-align: center;
+}
+.notif-items{
+  padding: 10px;
+  margin: 3px;
+  display: flex;
+  font-size: 14px;
+  text-align: center;
+
+}
+.notif-items:hover{
+  background-color: var(--hover);
+}
+
+.nav-list{
+  height:52%;
+  width: 17%;
+  background-color: var(--graph-color);
+  position: fixed;
+  overflow: hidden;
+  border-radius: 10px;
+  margin-top: 50px;
+  text-decoration: none;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  justify-content: center;
+  display: block;
+  transition: ease-in-out 0.4s;
+  box-shadow: 0 0 10px rgb(65, 65, 65);
+  right: 230px;
   z-index: 100;
   display: none;
 }
-.nav-list{
-  height:60%;
-  width: 20%;
-  background-color: var(--graph-color);
-  position: fixed;
-  padding: 10px;
-  border-radius: 20px;
-  margin-top: 4%;
-  text-decoration: none;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  overflow: scroll;
+.list-btn{
   display: block;
-  transition: ease-in-out 0.4s;
-  box-shadow: 0 0 10px rgb(65, 65, 65);
-  right: 13%;
-  z-index: 100;
-  display: none;
+  justify-content: center;
+  button{
+    width: 100%;
+    height: 50px;
+    border: 2px solid rgb(51, 153, 255);
+    color: rgb(51, 153, 255);
+    background: transparent;
+    align-items: center;
+    border-radius: 10px;
+    font-size: 17px;
+  }
+}
+.list-btn button:hover{
+  background-color: rgb(51, 153, 255);
+  color: var(--background-color);
+  cursor: pointer;
+  transition: ease-in-out 0.2s;
 }
 .nav-mail{
-  height:85%;
+  height:88%;
   width: 30%;
   background-color: var(--graph-color);
   position: fixed;
-  padding: 10px;
-  border-radius: 20px;
-  margin-top: 4%;
+  
+  border-radius: 10px;
+  margin-top: 50px;
   text-decoration: none;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   overflow: scroll;
   display: block;
   transition: ease-in-out 0.4s;
   box-shadow: 0 0 10px rgb(65, 65, 65);
-  right: 10%;
+  right: 180px;
   z-index: 100;
   display: none;
 }
@@ -131,10 +185,10 @@ code {
 }
 .left-nav{
   height: 100%;
-  width: 20%;
+  width: 25%;
   background-color: var(--graph-color);
   position: fixed;
-  padding: 10px;
+  
   text-decoration: none;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   overflow: scroll;
@@ -151,6 +205,42 @@ code {
 .left-nav.close{
   right: -500px;
 }
+.left-nav-head{
+  display: flex;
+  justify-content: space-between;
+  height: 50px;
+  padding:10px 10px 5px 0px;
+  margin: 0;
+  box-shadow: 0px 0px 2px black;
+  align-items: center;
+}
+.left-nav-head-icons{
+  display: flex;
+  margin: 0;
+}
+.left-icon{
+  padding: 15px;
+  cursor: pointer;
+}
+.left-icon:hover{
+  color: rgb(51, 153, 255) !important;
+  border-bottom: 3px solid rgb(51, 153, 255);
+  
+}
+.left-nav-content{
+  display: block;
+  transition: ease-in-out 0.3s;
+  margin: 10px;
+  padding: 5px;
+}
+.left-nav-content.open{
+  display: block;
+  transition: ease-in-out 0.3s;
+}
+.left-nav-content.close{
+  display: none;
+}
+
 
 .navbar{
   height: 100%;
@@ -424,7 +514,7 @@ input{
 .users-cnt{
   
   background-color:var(--graph-color);
-  width: 75%;
+  width: 100%;
   padding: 10px;
   overflow: scroll;
   box-shadow: var(--box-shadow);
@@ -455,6 +545,7 @@ input{
   padding: 10px;
   margin: 10px;
   margin-top: 20px;
+  width: 95%;
 }
 .users-main{
   height: 70px;
@@ -465,6 +556,9 @@ input{
   align-items: center;
   padding: 5px;
   
+}
+.users-main:hover{
+  background-color: var(--hover);
 }
 .users-data-head{
   display: flex;
@@ -482,8 +576,37 @@ input{
   margin-left: 20px;
 }
 .users-usage{ 
-  width: 170px;
+  width: 200px;
   margin-left: 40px;
+}
+.usage-bar{
+  width: 100%;
+  height: 5px;
+  border-radius: 3px;
+  overflow: hidden;
+  background-color: rgb(221, 222, 226);
+}
+.users-bar{
+  height: 10px;
+  animation: bar linear 1s ;
+  
+  
+}
+@keyframes bar {
+  from{
+    width: 0%;
+  }
+}
+.usage-content{
+  margin: 5px;
+  text-align: left;
+  padding: 5px;
+  width: 100%;
+  
+}
+.usage-content:hover{
+  background-color:var(--hover) ;
+  
 }
 .users-pic img{
   width: 40px;
@@ -546,6 +669,17 @@ input{
   height: 100%;
   width: 100%;
 }
+.footer{
+  display: flex;
+  justify-content: center;
+  font:italic;
+  color: rgb(0, 133, 185);
+  position: fixed;
+  bottom: 1px;
+  justify-self: center;
+  align-self: center;
+  font-weight: bolder;
+}
 @media (max-width:980px) {
   .colors-cnt-items{
    display: block;
@@ -591,12 +725,9 @@ input{
     display: flex;
     margin-top: 30px;
   }
-  .users-cnt{
-    
-    
-    width: 100%;
-    
-  }
+  
+  
+  
   
   .users-main-cnt{
     display:block;
